# slack-bridge-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: archive.md  pets-architecture.md  pets-framework.md  thread-mining.md
hooks/: pre-commit
launchd/: com.example.slack-bridge-archive.plist  com.example.slack-bridge-compact.plist  com.example.slack-bridge-watcher.plist
src/slack_bridge_mcp/: __init__.py  __main__.py  browser.py  caches.py  client.py  config.py  context.py  ratelimit.py  server.py
src/slack_bridge_mcp/archive/: __init__.py  cold.py  compact.py  daemon.py  db.py  ingest.py  migrate.py
src/slack_bridge_mcp/pets/: __init__.py  audit.py  registry.py  runner.py  spec.py
src/slack_bridge_mcp/tools/: __init__.py  actions.py  archive.py  assistant.py  auth.py  bots.py  digest.py  example.py  files.py  messaging.py  pets.py  profile.py  users.py  watcher.py
src/slack_bridge_mcp/watcher/: __init__.py  actions.py  daemon.py  rules.py
tests/: test_archive_compact.py  test_config.py
